functionality has been established. time to set media queries

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,200 @@
-.App {
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+html {
+  font-size: 62.5%;
+  max-width: 1280px;
+}
+
+body {
+  background-color: #f6f6f6;
+  margin: 0;
+  padding: 0;
+  font-family: 'Work Sans', sans-serif;
+  font-size: 1.6rem;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+header {
+  background: black;
+  color: white; 
+  width: 100%;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+h1 {
+  font-weight: 700;
+  font-size: 3rem;
+  margin: 0;
+  letter-spacing: 1px;
+}
+
+h4 {
+  margin-top: 5px;
+  padding-bottom: 5px;
+  letter-spacing: 1px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+}
+
+p {
+  margin: 0;
+  padding: 0;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+footer {
+  position: fixed;
+  background-color: black;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 5px;
 }
 
-.App-intro {
-  font-size: large;
+footer span {
+  position: absolute;
+  right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+footer i {
+  color: white;
 }
+
+.todolist {
+display: flex;
+margin-top: 15px;
+padding: 15px;
+justify-content: center;
+border-bottom: 1px dotted black;
+}
+
+.todolistContent {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-left: 75px;
+}
+
+.pack, .visit, .buy {
+  max-width: 33%;
+}
+
+.todolistContent:nth-of-type(1) {
+  margin: 0;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  width: 200px;
+  margin-left: 30px;
+  margin-top: 20px;
+  border: none;
+  background-color: #f6f6f6;
+  padding: 8px;
+}
+
+input[type=text] {
+  outline: none;
+  border: none;
+  transition: 0.2s all ease;
+  border-bottom: 2px solid black;
+}
+
+input[type=text]:focus {
+  box-shadow: 0 2px rgba(81, 203, 238, 1);
+  border: 0 2px solid rgba(81, 203, 238, 1);
+  border-bottom: none;
+}
+
+
+input[type=submit] {
+  background-color: black;
+  color: white;
+}
+
+input:nth-of-type(1) {
+  margin-left: 0;
+}
+
+button:hover {
+  color: black;
+  transition: 0.2s all ease;
+}
+
+ul {
+  padding: 0;
+}
+
+.fa-ul {
+  margin-left: 0;
+}
+
+.fa-li:nth-last-of-type(1) {
+  margin: 0;
+}
+
+li {
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  margin-top: 10px;
+  text-transform: capitalize;
+}
+
+li:nth-of-type(1) {
+  margin-top: 0;
+}
+
+.strikethrough {
+  text-decoration: line-through;
+  color: red;
+  transition: 0.2s all ease;
+}
+
+.delete {
+  width: 50px;
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: white;
+  background-color: red;
+  padding: 0;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+
