--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@ html {
 
 body {
   background-color: #f6f6f6;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1280px;
   padding: 0;
   font-family: 'Work Sans', sans-serif;
   font-size: 1.6rem;
@@ -207,6 +208,10 @@ li:nth-of-type(1) {
 }
 
 @media (max-width: 550px) {
+  header {
+    width: 100%
+  }
+
   .inputs {
     flex-direction: column;
   }
@@ -231,7 +236,16 @@ li:nth-of-type(1) {
   header h4 {
     display: none;
   }
-  
+
+  .todolist {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .todolistContent {
+    margin-left: 0;
+  }  
 }
 
 
