--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,7 @@
+@import 'setup';
+@import 'footer';
+@import 'hovers';
+
 html {
   font-size: 62.5%;
   max-width: 1280px;
@@ -6,8 +10,7 @@ html {
 body {
   background-color: #f6f6f6;
   margin: 0 auto;
-  max-width: 1280px;
-  padding: 0;
+ padding: 0;
   font-family: 'Work Sans', sans-serif;
   font-size: 1.6rem;
   text-align: center;
@@ -45,33 +48,6 @@ a {
 p {
   margin: 0;
   padding: 0;
-  color: white;
-}
-
-footer {
-  width: 100%;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: black;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 10px;
-  letter-spacing: 0.2px;
-}
-
-footer a:hover {
-  color: lightsalmon;
-  transition: 0.2s all ease;
-}
-
-footer span {
-  position: absolute;
-  right: 20px;
-}
-
-footer i {
   color: white;
 }
 
@@ -188,23 +164,6 @@ li:nth-of-type(1) {
   cursor: pointer;
 }
 
-.hvr-grow-shadow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: box-shadow, transform;
-  transition-property: box-shadow, transform;
-}
-.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
 /*/----------------------- MEDIA QUERIES ----------------------------------------------- */
 
 @media (max-width: 701px) {
@@ -259,6 +218,3 @@ li:nth-of-type(1) {
       display: none;
   }
 }
-
-
-
