--- a/src/app.scss
+++ b/src/app.scss
@@ -91,6 +91,9 @@ input {
   border: none;
   background-color: #f6f6f6;
   padding: 8px;
+    &:nth-of-type(1) {
+      margin-left: 0;
+    }
 }
 
 input[type=text] {
@@ -98,22 +101,16 @@ input[type=text] {
   border: none;
   transition: 0.2s all ease;
   border-bottom: 2px solid black;
+    &:focus {
+        box-shadow: 0 2px rgba(81, 203, 238, 1);
+        border: 0 2px solid rgba(81, 203, 238, 1);
+        border-bottom: none;
+    }
 }
-
-input[type=text]:focus {
-  box-shadow: 0 2px rgba(81, 203, 238, 1);
-  border: 0 2px solid rgba(81, 203, 238, 1);
-  border-bottom: none;
-}
-
 
 input[type=submit] {
   background-color: black;
   color: white;
-}
-
-input:nth-of-type(1) {
-  margin-left: 0;
 }
 
 button:hover {
@@ -139,15 +136,17 @@ li {
   margin: 0;
   margin-top: 10px;
   text-transform: capitalize;
-}
-
-li:nth-of-type(1) {
-  margin-top: 0;
+    &:hover {
+      color: dodgerblue;
+    }
+    &:nth-of-type(1) {
+      margin-top: 0;
+    }
 }
 
 .strikethrough {
   text-decoration: line-through;
-  color: red;
+  color: dodgerblue;
   transition: 0.2s all ease;
 }
 
