--- a/src/App.css
+++ b/src/App.css
@@ -315,6 +315,8 @@ li {
     text-align: center;
     margin-top: 10px;
     width: 80%; }
+  .add i {
+    right: 60px; }
   h2 {
     border-bottom: 1px solid black;
     margin-bottom: 0; }
