--- a/src/app.scss
+++ b/src/app.scss
@@ -187,6 +187,10 @@ li {
     width: 80%;
   }
 
+  .add i {
+    right: 60px;
+  }
+
   h2 {
     border-bottom: 1px solid black;
     margin-bottom: 0;
